subnets.tf
provider "aws" {
  region = "us-east-1"  
  access_key = var.access_key
  secret_key = var.secret_key
}

terraform {
  backend "s3" {
    bucket = "forterraform1503"
    key    = "terraform/terraform.tfstate"
    region = "us-east-1"
    access_key = var.access_key
    secret_key = var.secret_key
    )

    variable "access_key" {
      type = string
      
    }
    variable "secrets_key"
      type = string
    }

resource "aws_vpc" "main_vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
}

resource "aws_subnet" "public_subnet" {
  vpc_id            = aws_vpc.main_vpc.id
  cidr_block        = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "us-east-1a"  
}

resource "aws_subnet" "private_subnet" {
  vpc_id            = aws_vpc.main_vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b" 
}
